--- a/linux_container/Dockerfile
+++ b/linux_container/Dockerfile
@@ -1,7 +1,7 @@
 FROM ubuntu:16.04
 
 
-COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc 
+#COPY ext/01_nodoc /etc/dpkg/dpkg.cfg.d/01_nodoc 
 
 RUN apt-get -y update && \
     apt-get -y install \
