--- a/dockerfiles/conda/Dockerfile.base_conda
+++ b/dockerfiles/conda/Dockerfile.base_conda
@@ -75,7 +75,7 @@ RUN apt-get -y update && \
     ldconfig
 
 RUN wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -O miniconda.sh
-RUN /bin/bash miniconda.sh -b -p /opt/conda && rm miniconda.sh
+RUN /bin/bash miniconda.sh -b p /opt/conda && rm miniconda.sh
 
 RUN /opt/conda/bin/conda install -y \
   cryptography \
@@ -103,6 +103,8 @@ RUN /opt/conda/bin/conda install -y \
   redis \
   scipy \
   boto
+
+RUN /opt/conda/bin/conda clean -ystp
 
 RUN addgroup --gid 1000 exasolution
 RUN adduser --disabled-login --uid 1000 --gid 1000 exasolution
