--- a/flavors/conda/Dockerfile.base_conda
+++ b/flavors/conda/Dockerfile.base_conda
@@ -15,12 +15,8 @@ RUN wget https://repo.continuum.io/miniconda/Miniconda2-latest-Linux-x86_64.sh -
     rm /miniconda.sh
 
 RUN /opt/conda/bin/conda install -y -v gcc_linux-64 gxx_linux-64 gfortran_linux-64 swig 
-RUN /opt/conda/bin/conda install -y -v pyzmq backports backports_abc bleach cdecimal certifi colorama configparser cython decorator entrypoints enum34 fastavro functools32 get_terminal_size html5lib ipykernel ipython ipython_genutils ipywidgets jinja2 jsonschema jupyter jupyter_client jupyter_console jupyter_core #kerberos krb5 libsodium markupsafe matplotlib mistune mkl nbconvert nbformat notebook numpy openssl pandas pandocfilters path.py pathlib2 pexpect pickleshare pip prompt_toolkit ptyprocess py py4j pyasn1 pygments pykerberos pyparsing pyqt pyspark pytest python python pytz pyzmq qtconsole readline redis redis requests requests retrying scandir scipy seaborn setuptools simplegeneric singledispatch six sqlite ssl_match_hostname testpath tk tornado traitlets traits urllib3 wcwidth wheel widgetsnbextension zeromq zlib zope.interface olap
-#suds
-#xmla
-#zope.event
-#zope.schema
-#retrying 
+RUN /opt/conda/bin/conda install -y -v pyzmq backports backports_abc bleach cdecimal certifi colorama configparser cython decorator entrypoints enum34 fastavro functools32 get_terminal_size html5lib ipykernel ipython ipython_genutils ipywidgets jinja2 jsonschema jupyter jupyter_client jupyter_console jupyter_core #kerberos krb5 libsodium markupsafe matplotlib mistune mkl nbconvert nbformat notebook numpy openssl pandas pandocfilters path.py pathlib2 pexpect pickleshare pip prompt_toolkit ptyprocess py py4j pyasn1 pygments pykerberos pyparsing pyqt pyspark pytest python python pytz pyzmq qtconsole readline redis redis requests requests retrying scandir scipy seaborn setuptools simplegeneric singledispatch six sqlite ssl_match_hostname testpath tk tornado traitlets traits urllib3 wcwidth wheel widgetsnbextension zeromq zlib zope.interface olap suds xmla zope.event zope.schema retrying 
+
 #exasol
 
 RUN /opt/conda/bin/conda clean -ystp
