--- a/.travis.yml
+++ b/.travis.yml
@@ -14,4 +14,5 @@ script:
    - ./build --flavor=conda
    - ./build --flavor=tensorflow
    - ./build --flavor=streaming
+   - ./build --flavor=fancyr
 
