--- a/flavors/fancyr_60/Dockerfile.base_fancyr_60
+++ b/flavors/fancyr_60/Dockerfile.base_fancyr_60
@@ -23,7 +23,7 @@ RUN apt-get -y update && \
         unzip \
         curl \
         libcurl4-openssl-dev  \
-        #r-cran-rcpparmadillo \
+        ed openjdk-9-jdk-headless \
         libnss-db  && \
     wget prdownloads.sourceforge.net/swig/swig-2.0.4.tar.gz && \
     tar zxf swig-2.0.4.tar.gz && \
@@ -38,7 +38,7 @@ RUN apt-get -y update && \
     adduser --disabled-login --uid 1000 --gid 1000 exasolution --gecos "First Last,RoomNumber,WorkPhone,HomePhone"
 
 RUN Rscript -e 'install.packages(c("RcppArmadillo","rredis", "data.table", "htmltools", "flashClust", "forecast", "np"), repos = "http://cran.r-project.org")' 
-
+RUN Rscript -e 'install.packages(c("abind","assertthat","backports","base64enc","BH","bindr","bindrcpp","bitops","Brobdingnag","broom","callr","car","carData","caTools","cellranger","classInt","clustMixType","combinat","crosstalk","DBI","dbplyr","doParallel","dplyr","e1071","evaluate","forcats","foreach","gdata","glmnet","gmodels","gplots","gtools","haven","hexbin","highr","hms","htmlwidgets","httpuv","httr","imputeTS","ISLR","iterators","jsonlite","KernSmoothIRT","klaR","knitr","labelled","later","lme4","LowRankQP","lubridate","manipulateWidget","maptools","markdown","MASS","mime","miniUI","minqa","mnormt","modelr","MPTinR","multcomp","mvtnorm","nloptr","numDeriv","openssl","openxlsx","pbkrtest","pkgconfig","plogr","plotly","plotrix","praise","processx","promises","psych","purrr","randomForest","RcppEigen","readr","readxl","rematch","reprex","rgl","rio","rmarkdown","ROSE","rprojroot","rstudioapi","rvest","sandwich","selectr","shiny","sourcetools","sp","spData","stinepack","survival","testthat","TH.data","tidyr","tidyselect","tidyverse","tinytex","tree","webshot","whisker","xml2","xtable","yaml","zip","translations","igraph","caret","kernlab","ROCR","gbm","party","arules","RWeka","ipred","lars","earth","CORElearn","mboost"), repos = "http://cran.r-project.org")'
 ENV LANG en_US.UTF-8  
 ENV LANGUAGE en_US:en  
 ENV LC_ALL en_US.UTF-8  
