--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ services:
 install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq unixodbc unixodbc-dev
+  - sudo ln -s /usr/lib/x86_64-linux-gnu/libodbcinst.so.1 /usr/lib/x86_64-linux-gnu/libodbcinst.so.2
 
 # build all flavors
 script: 
