--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,19 @@ sudo: false
 services:
     - docker
 
+
 install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq unixodbc unixodbc-dev
   - sudo ln -s /usr/lib/x86_64-linux-gnu/libodbcinst.so.1 /usr/lib/x86_64-linux-gnu/libodbcinst.so.2
 
-# build all flavors
-script: 
-  - ./build --flavor=mini
-  - ./export --flavor=mini
-  - ./test --flavor mini
+matrix:
+  include:
+  - name: mini
+    env: MATRIX_FLAVOR=mini
+  - name: fancyr_60
+    env: MATRIX_FLAVOR=fancyr_60
+  script:
+    - ./build --flavor=$MATRIX_FLAVOR
+    - ./export --flavor=$MATRIX_FLAVOR
+    - ./test --flavor $MATRIX_FLAVOR
