--- a/flavors/mini/Dockerfile.base_mini
+++ b/flavors/mini/Dockerfile.base_mini
@@ -19,8 +19,11 @@ RUN apt-get -y update && \
         unzip \
         swig \
         python-pip \
+        python-lxml \
+        python-cjson \
+        python-pandas \
         libpcre3-dev && \
-    pip install zxcvbn faker numpy scipy sklearn && \
+    pip install zxcvbn faker numpy scipy sklearn pytz && \
     locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
