improved automatic tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -18,6 +18,8 @@ matrix:
     env: MATRIX_FLAVOR=mini
   - name: fancyr_60
     env: MATRIX_FLAVOR=fancyr_60
+  - name: standard
+    env: MATRIX_FLAVOR=standard
 
 script:
   - ./build --flavor=$MATRIX_FLAVOR
