reenabled unoptimized build for one java file that needs it, removed fancyr_60 from travis -- job takes too long, added pycurl to python3

--- a/flavors/python3_60/Dockerfile.base_python3_60
+++ b/flavors/python3_60/Dockerfile.base_python3_60
@@ -36,6 +36,8 @@ RUN git clone git://github.com/statsmodels/statsmodels.git
 RUN apt-get -y install cython3
 RUN (cd statsmodels ; python3.6 setup.py install )
 RUN rm -r statsmodels
+RUN apt-get --yes  remove python3-pycurl
+RUN python3.6 -m pip install pycurl
 RUN locale-gen en_US.UTF-8 && \
     update-locale LC_ALL=en_US.UTF-8 && \
     apt-get -y clean && \
