--- a/flavors/python3_60/Dockerfile.base_python3_60
+++ b/flavors/python3_60/Dockerfile.base_python3_60
@@ -24,18 +24,16 @@ RUN apt-get update && \
  	swig \
         python3-pip \
         python3.6-tk \
-        libpcre3-dev && \
-    python3.6 -m pip install --upgrade pip setuptools wheel && \
-    curl -OL https://github.com/google/protobuf/releases/download/v3.5.1/protobuf-cpp-3.5.1.zip && \
+        libpcre3-dev
+
+RUN apt-get -y install cython3 libcurl4-openssl-dev
+RUN  python3.6 -m pip install --upgrade pip setuptools wheel
+RUN  curl -OL https://github.com/google/protobuf/releases/download/v3.5.1/protobuf-cpp-3.5.1.zip && \
     unzip protobuf-cpp-3.5.1.zip && \
     (cd protobuf-3.5.1 ; ./configure ; make -j 4 ; make install ) && \
     rm protobuf-cpp-3.5.1.zip  && rm -r protobuf-3.5.1
 
-RUN pip install keras tensorflow kmodes seaborn matplotlib imbalanced-learn lifelines nltk gensim
-RUN git clone git://github.com/statsmodels/statsmodels.git
-RUN apt-get -y install cython3
-RUN (cd statsmodels ; python3.6 setup.py install )
-RUN rm -r statsmodels
+RUN pip install keras tensorflow kmodes seaborn matplotlib imbalanced-learn lifelines nltk gensim lxml ujson numpy scipy scikit-learn statsmodels joblib
 RUN apt-get --yes  remove python3-pycurl
 RUN python3.6 -m pip install pycurl
 RUN locale-gen en_US.UTF-8 && \
