--- a/flavors/standard/Dockerfile.test_standard
+++ b/flavors/standard/Dockerfile.test_standard
@@ -5,7 +5,7 @@ RUN mkdir /exasol_emulator
 COPY emulator/ /exasol_emulator
 COPY src/zmqcontainer.proto /exasol_emulator
 
-RUN     apt-get -y install python-protobuf python-zmq gdb
+RUN     apt-get -y install python-protobuf python-zmq gdb valgrind
 
 RUN cd /exasol_emulator && protoc zmqcontainer.proto --python_out=.
 RUN ls /exasol_emulator
