--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ matrix:
     env: MATRIX_FLAVOR=standard GENERIC_TEST_LANG=r TEST_FOLDER=r
   - name: standard-java
     env: MATRIX_FLAVOR=standard GENERIC_TEST_LANG=java TEST_FOLDER=java
-  - name: python3_60
+  - name: python3_60-python3
     env: MATRIX_FLAVOR=python3_60 GENERIC_TEST_LANG=python TEST_FOLDER=python3
 
 script:
