--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,4 @@
+#
 language: python
 
 # Setting sudo to false will cause Travis to use Containers (default in the meantime)
@@ -22,9 +23,9 @@ matrix:
     env: MATRIX_FLAVOR=standard GENERIC_TEST_LANG=r TEST_FOLDER=r
   - name: standard-java
     env: MATRIX_FLAVOR=standard GENERIC_TEST_LANG=java TEST_FOLDER=java
-  - name: python3_60
+  - name: python3_60-python3
     env: MATRIX_FLAVOR=python3_60 GENERIC_TEST_LANG=python TEST_FOLDER=python3
 
 script:
-  - ./test_standalone --flavor=$MATRIX_FLAVOR --test-folder=$TEST_FOLDER --generic-test-lang=$GENERIC_TEST_LANG
+  - ./test_complete --flavor=$MATRIX_FLAVOR --test-folder=$TEST_FOLDER --generic-test-lang=$GENERIC_TEST_LANG
 
