fixed bugs in singleCall and added more tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -25,6 +25,12 @@ matrix:
     env: MATRIX_FLAVOR=standard_60 GENERIC_TEST_LANG=java TEST_FOLDER=java
   - name: python3_60-python3
     env: MATRIX_FLAVOR=python3_60 GENERIC_TEST_LANG=python TEST_FOLDER=python3
+  - name: standard_61-python
+    env: MATRIX_FLAVOR=standard_61 GENERIC_TEST_LANG=python TEST_FOLDER=python
+  - name: standard_61-r
+    env: MATRIX_FLAVOR=standard_61 GENERIC_TEST_LANG=r TEST_FOLDER=r
+  - name: standard_61-java
+    env: MATRIX_FLAVOR=standard_61 GENERIC_TEST_LANG=java TEST_FOLDER=java
 
 script:
   - ./test_complete --flavor=$MATRIX_FLAVOR --test-folder=$TEST_FOLDER --generic-test-lang=$GENERIC_TEST_LANG
