added python requests library to flavors standard_60 and standard_61

--- a/flavors/standard_60/Dockerfile.base_standard_60
+++ b/flavors/standard_60/Dockerfile.base_standard_60
@@ -60,6 +60,7 @@ RUN apt-get -y update && \
         python-scipy \
         python-boto \
 	python-pycurl \
+        python-requests \
         r-cran-rcurl \
         r-cran-xml \
         r-cran-formula \
