--- a/flavors/mini/Dockerfile.base_mini
+++ b/flavors/mini/Dockerfile.base_mini
@@ -22,6 +22,7 @@ RUN apt-get -y update && \
         python-lxml \
         python-cjson \
         python-pandas \
+        python-requests \
         libpcre3-dev && \
     pip install pytz && \
     locale-gen en_US.UTF-8 && \
