--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ services:
     - docker
 
 install:
-  - sudo apt-get update -qq
-  - sudo apt-get install -qq unixodbc unixodbc-dev
+#  - sudo apt-get update 
+  - sudo apt-get install unixodbc unixodbc-dev
   - sudo ln -s /usr/lib/x86_64-linux-gnu/libodbcinst.so.1 /usr/lib/x86_64-linux-gnu/libodbcinst.so.2
 
 
