--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 #
-language: python
+#language: python
 
 # Setting sudo to false will cause Travis to use Containers (default in the meantime)
 sudo: true
