--- a/.travis.yml
+++ b/.travis.yml
@@ -17,22 +17,20 @@ matrix:
   include:
   - name: mini-python-python
     env: MATRIX_FLAVOR=mini GENERIC_TEST_LANG=python TEST_FOLDER=python
-  - name: standard_60-python
-    env: MATRIX_FLAVOR=standard_60 GENERIC_TEST_LANG=python TEST_FOLDER=python
-  - name: standard_60-r
-    env: MATRIX_FLAVOR=standard_60 GENERIC_TEST_LANG=r TEST_FOLDER=r
-  - name: standard_60-java
-    env: MATRIX_FLAVOR=standard_60 GENERIC_TEST_LANG=java TEST_FOLDER=java
-  - name: python3_60-python3
-    env: MATRIX_FLAVOR=python3_60 GENERIC_TEST_LANG=python TEST_FOLDER=python3
-  - name: standard_61-python
-    env: MATRIX_FLAVOR=standard_61 GENERIC_TEST_LANG=python TEST_FOLDER=python
-  - name: standard_61-r
-    env: MATRIX_FLAVOR=standard_61 GENERIC_TEST_LANG=r TEST_FOLDER=r
-  - name: standard_61-java
-    env: MATRIX_FLAVOR=standard_61 GENERIC_TEST_LANG=java TEST_FOLDER=java
-#  - name: fancyr_60-r
-#    env: MATRIX_FLAVOR=fancyr_60 GENERIC_TEST_LANG=r TEST_FOLDER=r
+  - name: standard-EXASOL-6.0.0-python
+    env: MATRIX_FLAVOR=standard-EXASOL-6.0.0 GENERIC_TEST_LANG=python TEST_FOLDER=python
+  - name: standard-EXASOL-6.0.0-r
+    env: MATRIX_FLAVOR=standard-EXASOL-6.0.0 GENERIC_TEST_LANG=r TEST_FOLDER=r
+  - name: standard-EXASOL-6.0.0-java
+    env: MATRIX_FLAVOR=python3-ds-EXASOL-6.0.0 GENERIC_TEST_LANG=java TEST_FOLDER=java
+  - name: python3-ds-EXASOL-6.0.0-python3
+    env: MATRIX_FLAVOR=python3-ds-EXASOL-6.0.0 GENERIC_TEST_LANG=python TEST_FOLDER=python3
+  - name: standard-EXASOL-6.0.1-python
+    env: MATRIX_FLAVOR=standard-EXASOL-6.0.1 GENERIC_TEST_LANG=python TEST_FOLDER=python
+  - name: standard-EXASOL-6.0.1-r
+    env: MATRIX_FLAVOR=standard-EXASOL-6.0.1 GENERIC_TEST_LANG=r TEST_FOLDER=r
+  - name: standard-EXASOL-6.0.1-java
+    env: MATRIX_FLAVOR=standard-EXASOL-6.0.1 GENERIC_TEST_LANG=java TEST_FOLDER=java
 
 script:
   - ./test_complete --flavor=$MATRIX_FLAVOR --test-folder=$TEST_FOLDER --generic-test-lang=$GENERIC_TEST_LANG
